@@ -1,3 +1,6 @@
+2010-03-03 Dominik Reichardt <dominus@users.sourceforge.net>
+	* exult.cc: look for data folder in .app bundle as well on Mac OS X (and changed the copyright date)
+	
 2010-02-25	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* Fixed bugs:
 	  #2958487 HQx3 is only scaled to 2x when set in Exult menu
